--- a/BackEnd/WebBlog/package.json
+++ b/BackEnd/WebBlog/package.json
@@ -2,6 +2,7 @@
   "name": "webblog",
   "version": "1.0.0",
   "main": "index.js",
+  "type":"module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
