--- a/BackEnd/WebBlog/package.json
+++ b/BackEnd/WebBlog/package.json
@@ -16,8 +16,11 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
+    "express-session": "^1.18.0",
     "fileupload": "^0.2.1",
     "nodemon": "^3.1.3",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.12.0"
   }
 }
