Added OAutrh: Implemented Sign in with Google

--- a/BackEnd/WebBlog/.env
+++ b/BackEnd/WebBlog/.env
@@ -1,3 +1,8 @@
 SESSION_SECRET="Secret"
-DB_PASSWORD="qiwinewpass"
 NEW_YOURK_TIMES_KEY="Zny6MhpNg3lYlhqE3Xv7AMZjuZG1i1nv"
+GOOGLE_CLIENT_ID="915016314286-hugknng44713357lpok4vh96ulshvd8c.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
+PG_USER="postgres"
+PG_HOST="localhost"
+PG_DATABASE_2="permalist"
+PG_DB_PASSWORD="qiwinewpass"
