--- a/BackEnd/WebBlog/package.json
+++ b/BackEnd/WebBlog/package.json
@@ -9,7 +9,6 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
@@ -21,7 +20,11 @@
     "fileupload": "^0.2.1",
     "nodemon": "^3.1.3",
     "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.12.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
