--- a/BackEnd/WebBlog/package.json
+++ b/BackEnd/WebBlog/package.json
@@ -25,7 +25,8 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.12.0",
-    "qs": "^6.13.0"
+    "qs": "^6.13.0",
+    "readable-stream": "^4.5.2"
   },
   "description": ""
 }
