--- a/BackEnd/WebBlog/package.json
+++ b/BackEnd/WebBlog/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
@@ -19,6 +20,7 @@
     "express-session": "^1.18.0",
     "fileupload": "^0.2.1",
     "iconv-lite": "^0.6.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.3",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
@@ -28,5 +30,5 @@
     "qs": "^6.13.0",
     "readable-stream": "^4.5.2"
   },
-  "description": ""
+  "description": "Web Blog Project"
 }
